--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -7,6 +7,7 @@
     <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
+    <language-switcher slot="language-switcher"></language-switcher>
     <tool-status-bar slot="tool-status-bar" item.bind="item" save-action.call="userSave()"></tool-status-bar>
   </q-bar>
   <main>
