--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -6,6 +6,7 @@
     <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
+    <language-switcher slot="language-switcher"></language-switcher>
   </q-bar>
   <main class="item-overview">
     <q-messages></q-messages>
