fix item-list css require

--- a/client/src/elements/organisms/items-list.html
+++ b/client/src/elements/organisms/items-list.html
@@ -1,5 +1,5 @@
 <template bindable="items">
-  <require from="./items-list.css!"></require>
+  <require from="./items-list.css"></require>
   <require from="../molecules/item-list-entry.js"></require>
 
   <item-list-entry repeat.for="item of items" item.bind="item"></item-list-entry>
