--- a/client/src/elements/schema-editor/schema-editor-select.html
+++ b/client/src/elements/schema-editor/schema-editor-select.html
@@ -5,7 +5,7 @@
       <option repeat.for="option of schema.enum" model.bind="option">${optionLabels[$index]}</option>
     </select>
     <div if.bind="selectType === 'radio'">
-      <div repeat.for="option of schema.enum">
+      <div repeat.for="option of schema.enum" class="q-form__radio">
         <input id="option-${option}" type="radio" name.bind="$parent.schema.title" model.bind="option" checked.bind="$parent.data" change.delegate="change()"></input>
         <label for="option-${option}">${optionLabels[$index]}</label>
       </div>
