--- a/client/src/elements/organisms/tool-selection.html
+++ b/client/src/elements/organisms/tool-selection.html
@@ -1,6 +1,6 @@
 <template>
   <require from="./tool-selection.css"></require>
-  <h2>${'general.createLabel' & t}</h2>
+  <slot name="title"></slot>
   <button-tertiary class="tool-selection__toggle-tools-button" if.bind="!showAllTools" click.delegate="toggleShowAll()" icon="expand-collapse" icon-size="big">${'general.showAllTools' & t}</button-tertiary>
   <button-tertiary class="tool-selection__toggle-tools-button" if.bind="showAllTools" click.delegate="toggleShowAll()" icon="expand-collapse" icon-size="big">${'general.showLessTools' & t}</button-tertiary>
   <div class="tool-selection__list">
