--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -13,8 +13,13 @@
       ${'general.edited' & t} ${item.conf.createdDate & timeAgo:7*24*60*60}, ${'general.by' & t} ${item.conf.createdBy}
     </span>
   </a>
-  <!-- <button-tertiary icon="more" size="big"></button-tertiary> -->
-  <!-- <delete-button if.bind="user.roles.includes('poweruser') || user.username === item.conf.createdBy" size="small" action.call="deleteItem()"
-    button-type="secondary">
-  </delete-button> -->
+
+  <div class="item-list-entry__options-dropdown">
+    <button-tertiary class="item-list-entry__options-dropdown-button" icon="more" size="big" click.delegate="toggleOptionDropdown()"></button-tertiary>
+    <div ref="optionsDropdown" class="item-list-entry__options-dropdown-content q-text-small">
+      <a href="#">${'item.activate' & t }</a>
+      <a href="#">${'item.blueprint' & t}</a>
+      <a if.bind="user.roles.includes('poweruser') || user.username === item.conf.createdBy" size="small" click.delegate="deleteItem()">${'item.delete' & t}</a>
+    </div>
+  </div>
 </template>
