--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -2,6 +2,8 @@
   <a route-href="route: item; params.bind: {id: item.id}">
     <require from="./item-list-entry.css"></require>
     <require from="../molecules/delete-button.html"></require>
+    <span if.bind="item.conf.active" class="q-text-small item-list-entry__state-tag item-list-entry__state-tag--active">${'item.activ' & t}</span>
+    <span if.bind="!item.conf.active" class="q-text-small item-list-entry__state-tag item-list-entry__state-tag--inactive">${'item.inactiv' & t}</span>
     <box-icon if.bind="iconSvg" code.bind="iconSvg" size="big" class="tool-icon"></box-icon>
 
     <span class="q-text-small">${item.conf.title}</span>
@@ -17,7 +19,8 @@
   <div class="item-list-entry__options-dropdown">
     <button-tertiary class="item-list-entry__options-dropdown-button" icon="more" size="big" click.delegate="toggleOptionDropdown()"></button-tertiary>
     <div ref="optionsDropdown" class="item-list-entry__options-dropdown-content q-text-small">
-      <a href="#">${'item.activate' & t }</a>
+      <a if.bind="!item.conf.active" click.delegate="activateItem()">${'item.activate' & t }</a>
+      <a if.bind="item.conf.active" click.delegate="deactivateItem()">${'item.deactivate' & t }</a>
       <a href="#">${'item.blueprint' & t}</a>
       <a if.bind="user.roles.includes('poweruser') || user.username === item.conf.createdBy" size="small" click.delegate="deleteItem()">${'item.delete' & t}</a>
     </div>
