--- a/client/src/elements/organisms/tool-selection.html
+++ b/client/src/elements/organisms/tool-selection.html
@@ -4,14 +4,14 @@
   <button-tertiary class="tool-selection__toggle-tools-button" if.bind="!showAllTools" click.delegate="toggleShowAll()" icon="expand-collapse" icon-size="big">${'general.showAllTools' & t}</button-tertiary>
   <button-tertiary class="tool-selection__toggle-tools-button" if.bind="showAllTools" click.delegate="toggleShowAll()" icon="expand-collapse" icon-size="big">${'general.showLessTools' & t}</button-tertiary>
   <div class="tool-selection__list">
-    <a repeat.for="tool of tools" if.bind="$index < alwaysVisibleToolCount" route-href="route: editor; params.bind: {tool: tool.name}">
+    <a repeat.for="tool of visibleTools" if.bind="$index < alwaysVisibleToolCount" route-href="route: editor; params.bind: {tool: tool.name}">
       <button-secondary tabindex="-1" size="huge" code.bind=tool.icon></button-secondary>
       <span if.bind="tool.label" class="q-text">${tool.label}</span>
       <span if.bind="!tool.label" class="q-text" t="tools:${tool.name}"></span>
     </a>
   </div>
   <div class="tool-selection__list" if.bind="showAllTools">
-    <a repeat.for="tool of tools" if.bind="$index >= alwaysVisibleToolCount" route-href="route: editor; params.bind: {tool: tool.name}">
+    <a repeat.for="tool of visibleTools" if.bind="$index >= alwaysVisibleToolCount" route-href="route: editor; params.bind: {tool: tool.name}">
       <button-secondary tabindex="-1" size="huge" code.bind=tool.icon></button-secondary>
       <span if.bind="tool.label" class="q-text">${tool.label}</span>
       <span if.bind="!tool.label" class="q-text" t="tools:${tool.name}"></span>
