Introduce ItemActionController to share logic for activate, deactivate, edit, delete and blueprint actions

--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -15,9 +15,9 @@
     </span>
   </a>
   <dropdown-menu>
-    <a if.bind="!item.conf.active" click.delegate="activateItem()">${'item.activate' & t }</a>
-    <a if.bind="item.conf.active" click.delegate="deactivateItem()">${'item.deactivate' & t }</a>
-    <a click.delegate="blueprint()">${'item.blueprint' & t}</a>
+    <a if.bind="!item.conf.active" click.delegate="itemActionController.activate(item)">${'item.activate' & t }</a>
+    <a if.bind="item.conf.active" click.delegate="itemActionController.deactivate(item)">${'item.deactivate' & t }</a>
+    <a click.delegate="itemActionController.blueprint(item)">${'item.blueprint' & t}</a>
     <a if.bind="user.roles.includes('poweruser') || user.username === item.conf.createdBy" size="small" click.delegate="deleteItem()">${'item.delete' & t}</a>
   </dropdown-menu>
 </template>
