--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -30,21 +30,21 @@
             <br> ${ 'general.by' & t } ${item.conf.updatedBy}</div>
         </div>
 
-        <button-secondary if.bind="!item.conf.active" click.delegate="activateItem()" icon="activate">
+        <button-secondary if.bind="!item.conf.active" click.delegate="itemActionController.activate(item)" icon="activate">
           <span t="item.activate"></span>
         </button-secondary>
 
-        <button-secondary if.bind="item.conf.active" click.delegate="deactivateItem()" icon="deactivate">
+        <button-secondary if.bind="item.conf.active" click.delegate="itemActionController.deactivate(item)" icon="deactivate">
           <span t="item.deactivate"></span>
         </button-secondary>
 
         <embed-code item.bind="item" target.bind="currentTarget"></embed-code>
 
-        <button-secondary if.bind="isToolAvailable" click.delegate="blueprint()" icon="blueprint">
+        <button-secondary if.bind="isToolAvailable" click.delegate="itemActionController.blueprint(item)" icon="blueprint">
           <span t="item.blueprint"></span>
         </button-secondary>
 
-        <button-secondary if.bind="isToolAvailable" click.delegate="edit()" icon="edit">
+        <button-secondary if.bind="isToolAvailable" click.delegate="itemActionController.edit(item)" icon="edit">
           <span t="item.edit"></span>
         </button-secondary>
 
