(confirm dialog) change order of yes/no and use button-primary and button-secondary

--- a/client/src/dialogs/confirm-dialog.html
+++ b/client/src/dialogs/confirm-dialog.html
@@ -5,8 +5,8 @@
       <h1 class="q-dialog-title">${config.confirmQuestion}</h1>
     </div>
     <div class="q-dialog__controls">
-      <button-yes click.delegate="controller.ok()">${config.proceedText}</button-yes>
-      <button-no click.delegate="controller.cancel()">${config.cancelText}</button-yes>
+      <button-secondary click.delegate="controller.cancel()">${config.cancelText}</button-secondary>
+      <button-primary click.delegate="controller.ok()">${config.proceedText}</button-primary>
     </div>
   </div>
 </template>
