--- a/client/src/dialogs/item-dialog.html
+++ b/client/src/dialogs/item-dialog.html
@@ -1,6 +1,7 @@
 <template>
   <require from="../styles/q-dialog.css"></require>
   <require from="elements/item-preview/item-preview"></require>
+  <button-tertiary class="q-dialog__close-button" icon="close" icon-size="big" click.delegate="controller.cancel()"></button-tertiary>
   <div class="q-dialog item-dialog">
     <div class="q-dialog__content">
       <item-preview if.bind="item.id" id.bind="item.id" target.two-way="currentTarget"></item-preview>
