--- a/client/src/dialogs/confirm-dialog.html
+++ b/client/src/dialogs/confirm-dialog.html
@@ -1,9 +1,10 @@
 <template>
   <require from="../styles/q-dialog.css"></require>
-  <div class="q-dialog q-dialog--bottom-controls">
+  <div class="q-dialog q-dialog--centered q-dialog--bottom-controls">
     <button-tertiary class="q-dialog__close-button" icon="close" icon-size="medium" click.delegate="controller.cancel()"></button-tertiary>
     <div class="q-dialog__content">
       <h1 class="q-dialog-title">${config.confirmQuestion}</h1>
+      <h2 class="q-dialog-subtitle" if.bind="config.confirmQuestionSub" innerhtml.bind="config.confirmQuestionSub"></h2>
     </div>
     <div class="q-dialog__controls">
       <button-secondary click.delegate="controller.cancel()">${config.cancelText}</button-secondary>
