--- a/client/src/dialogs/confirm-dialog.html
+++ b/client/src/dialogs/confirm-dialog.html
@@ -1,6 +1,6 @@
 <template>
   <require from="../styles/q-dialog.css"></require>
-  <div class="q-dialog q-dialog--centered q-dialog--bottom-controls">
+  <div class="q-dialog q-dialog--small q-dialog--centered q-dialog--bottom-controls">
     <button-tertiary class="q-dialog__close-button" icon="close" icon-size="medium" click.delegate="controller.cancel()"></button-tertiary>
     <div class="q-dialog__content">
       <h1 class="q-dialog-title">${config.confirmQuestion}</h1>
