--- a/client/src/elements/atoms/icon-button.html
+++ b/client/src/elements/atoms/icon-button.html
@@ -1,8 +1,8 @@
 <template class="size-${size}">
   <require from="./icon-button.css"></require>
   <button tabindex.bind="tabindex" type.bind="type">
-    <span class="icon-button__icon">
-      <box-icon if.bind="code || icon" code.bind="code" icon.bind="icon" size="${iconSize || size}"></box-icon>
+    <span class="icon-button__icon" if.bind="code || icon">
+      <box-icon code.bind="code" icon.bind="icon" size="${iconSize || size}"></box-icon>
     </span>
     <span class="icon-button__text">
       <slot></slot>
