--- a/client/src/elements/organisms/tool-status-bar.html
+++ b/client/src/elements/organisms/tool-status-bar.html
@@ -2,6 +2,7 @@
   <require from="./tool-status-bar.css"></require>
 
   <div class="tool-status-bar__group">
+    <span class="tool-status-bar__item q-text-small q-text--ultralight">${'item.lastSaved' & t} ${item.conf.updatedDate | timeAgo:7*24*60*60 & signal:'update-timeago'}</span>
     <icon-save-state class="tool-status-bar__item" is-saved.bind="item.isSaved"></icon-save-state>
     <button-secondary class="tool-status-bar__item tool-status-bar__button" icon="save" if.bind="saveAction" click.delegate="saveAction()">
       <span class="tool-status-bar__button-text" t="item.save"></span>
