--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -3,7 +3,7 @@
   <require from="elements/schema-editor/schema-editor"></require>
   <require from="elements/item-preview/item-preview"></require>
   <require from="elements/organisms/tool-status-bar"></require>
-  <q-bar if.bind="user.isLoggedIn" router.bind="router">
+  <q-bar if.bind="user.isLoggedIn" router.bind="router" class="q-bar--no-logo">
     <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
