--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -2,7 +2,7 @@
   <require from="elements/item-preview/item-preview"></require>
   <require from="./item-overview.css"></require>
 
-  <q-bar if.bind="user.isLoggedIn" router.bind="router">
+  <q-bar if.bind="user.isLoggedIn" router.bind="router" class="q-bar--no-logo">
     <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
