--- a/client/src/livingdocs-component-app/app.html
+++ b/client/src/livingdocs-component-app/app.html
@@ -49,13 +49,14 @@
     </div>
     <div class="livingdocs-component-item-container">
       <div class="livingdocs-component-item-preview">
-        <preview-container ref="previewContainer" id="preview-container" if.bind="selectedItemIndex !== undefined" width.bind="previewWidth"
-          rendering-info.bind="renderingInfo" target.bind="target">
+        <preview-container ref="previewContainer" id="preview-container" if.bind="selectedItemIndex !== undefined && item.conf.active"
+          width.bind="previewWidth" rendering-info.bind="renderingInfo" target.bind="target">
         </preview-container>
         <h2 class="livingdocs-component-item-preview__message" if.bind="selectedItemIndex === undefined">${'livingdocsComponent.selectGraphic' & t}</h2>
+        <h2 class="livingdocs-component-item-preview__message" if.bind="selectedItemIndex !== undefined && !item.conf.active">${'livingdocsComponent.inactiveGraphic' & t}</h2>
       </div>
       <div class="livingdocs-component-item-options">
-        <div if.bind="selectedItemIndex !== undefinded">
+        <div if.bind="selectedItemIndex !== undefinded && item.conf.active">
           <form class="q-form">
             <div class="q-form__checkbox" if.bind="displayOptionsSchema.properties" repeat.for="optionKey of displayOptionsSchema.properties | keys">
               <label>
