--- a/client/src/livingdocs-component-app/app.html
+++ b/client/src/livingdocs-component-app/app.html
@@ -48,35 +48,43 @@
       </button-secondary>
     </div>
     <div class="livingdocs-component-item-container">
+
       <div class="livingdocs-component-item-preview">
-        <preview-container ref="previewContainer" id="preview-container" if.bind="selectedItemIndex !== undefined && items[selectedItemIndex].conf.active"
-          width.bind="previewWidth" rendering-info.bind="renderingInfo" target.bind="target">
-        </preview-container>
-        <h2 class="livingdocs-component-item-preview__message" if.bind="selectedItemIndex === undefined">${'livingdocsComponent.selectGraphic' & t}</h2>
-        <h2 class="livingdocs-component-item-preview__message" if.bind="selectedItemIndex !== undefined && !items[selectedItemIndex].conf.active">${'livingdocsComponent.inactiveGraphic' & t}</h2>
-      </div>
-      <div class="livingdocs-component-item-options">
-        <div if.bind="selectedItemIndex !== undefined && items[selectedItemIndex].conf.active">
-          <form class="q-form">
-            <div class="q-form__checkbox" if.bind="displayOptionsSchema.properties" repeat.for="optionKey of displayOptionsSchema.properties | keys">
-              <label>
-                <input type="checkbox" checked.bind="selectedItems[selectedItemIndex].toolRuntimeConfig.displayOptions[optionKey]" change.delegate="loadPreview()">
-                <span class="q-text">${displayOptionsSchema.properties[optionKey].title}</span>
-              </label>
-            </div>
-          </form>
+        <div show.bind="selectedItemIndex !== undefined && selectedItems[selectedItemIndex].active">
+          <div class="livingdocs-component-item-title">
+            <h2 if.bind="title">${title}</h2>
+          </div>
+          <preview-container ref="previewContainer" id="preview-container" width.bind="previewWidth" rendering-info.bind="renderingInfo"
+            target.bind="target">
+          </preview-container>
         </div>
+        <h2 class="livingdocs-component-item-preview__message" show.bind="selectedItemIndex === undefined">${'livingdocsComponent.selectGraphic' & t}</h2>
+        <h2 class="livingdocs-component-item-preview__message" show.bind="selectedItemIndex !== undefined && !selectedItems[selectedItemIndex].active">${'livingdocsComponent.inactiveGraphic' & t}</h2>
       </div>
-      <div class="livingdocs-component-item-controls">
-        <div class="item-edit">
-          <a href="#/editor/${tool}/${selectedItems[selectedItemIndex].id}" target="_blank">
-            <button-secondary size="big" icon="edit"></button-secondary>
-          </a>
-          <span class="q-text">${'livingdocsComponent.edit' & t}</span>
+      <div class="livingdocs-component-item-controls-container">
+        <div class="livingdocs-component-item-options">
+          <div if.bind="selectedItemIndex !== undefined && selectedItems[selectedItemIndex].active">
+            <form class="q-form">
+              <div class="q-form__checkbox" show.bind="displayOptionsSchema.properties" repeat.for="optionKey of displayOptionsSchema.properties | keys">
+                <label>
+                  <input type="checkbox" checked.bind="selectedItems[selectedItemIndex].toolRuntimeConfig.displayOptions[optionKey]" change.delegate="loadPreview()">
+                  <span class="q-text">${displayOptionsSchema.properties[optionKey].title}</span>
+                </label>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="item-insert">
-          <button-primary click.delegate="insertItem()" size="big" icon="deactivate"></button-primary>
-          <span class="q-text">${'livingdocsComponent.insert' & t}</span>
+        <div class="livingdocs-component-item-controls">
+          <div class="item-edit">
+            <a href="#/editor/${tool}/${selectedItems[selectedItemIndex].id}" target="_blank">
+              <button-secondary size="big" icon="edit"></button-secondary>
+            </a>
+            <span class="q-text">${'livingdocsComponent.edit' & t}</span>
+          </div>
+          <div class="item-insert">
+            <button-primary click.delegate="insertItem()" size="big" icon="deactivate"></button-primary>
+            <span class="q-text">${'livingdocsComponent.insert' & t}</span>
+          </div>
         </div>
       </div>
     </div>
