--- a/client/src/elements/schema-editor/schema-editor-array.html
+++ b/client/src/elements/schema-editor/schema-editor-array.html
@@ -27,16 +27,12 @@
       </div>
     </div>
     <div class="schema-editor-array__button-container">
-      <button-secondary class="schema-editor-array__button" repeat.for="arrayEntryOption of arrayEntryOptions" click.delegate="deleteElement($index)">
-        ${'editor.arrayEntryRemove' & t: arrayEntryOption}
+      <button-secondary class="schema-editor-array__button" click.delegate="deleteElement($index)">
+        ${'editor.arrayEntryRemove' & t: getArrayEntryOption($index)}
       </button-secondary>
-      <button-primary class="schema-editor-array__button" if.bind="$last" repeat.for="arrayEntryOption of arrayEntryOptions" click.delegate="addElement(arrayEntryOption.schema)">
-        ${'editor.arrayEntryAdd' & t: arrayEntryOption}
-      </button-primary>
     </div>
   </div>
-  <button-primary class="schema-editor-array__button" if.bind="data.length === 0" repeat.for="arrayEntryOption of arrayEntryOptions"
-    click.delegate="addElement(arrayEntryOption.schema)">
+  <button-primary class="schema-editor-array__button" repeat.for="arrayEntryOption of arrayEntryOptions" click.delegate="addElement(arrayEntryOption.schema)">
     ${'editor.arrayEntryAdd' & t: arrayEntryOption}
   </button-primary>
 </template>
