--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -8,7 +8,7 @@
       <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
     <language-switcher slot="language-switcher"></language-switcher>
-    <tool-status-bar slot="tool-status-bar" item.bind="item" save-action.call="userSave()"></tool-status-bar>
+    <tool-status-bar slot="tool-status-bar" item.bind="item" save-action.call="userSave()" last-saved-date.bind="lastSavedDate"></tool-status-bar>
   </q-bar>
   <main>
     <div class="editor">
